After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779329 - gst-plugins-ugly fails to build with GCC 7.0.1
gst-plugins-ugly fails to build with GCC 7.0.1
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
1.11.x
Other Linux
: Normal normal
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-27 18:23 UTC by leigh123linux@googlemail.com
Modified: 2017-02-27 19:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description leigh123linux@googlemail.com 2017-02-27 18:23:00 UTC
Heres the error


gstasfdemux.c: In function 'gst_asf_demux_parse_stream_object':
gstasfdemux.c:3001:39: error: '<<' in boolean context, did you mean '<' ? [-Werror=int-in-bool-context]
   is_encrypted = ! !((flags & 0x8000) << 15);
                     ~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
make[3]: *** [Makefile:634: libgstasf_la-gstasfdemux.lo] Error 1
make[3]: Leaving directory '/builddir/build/BUILD/gst-plugins-ugly-1.11.2/gst/asfdemux'
make[2]: *** [Makefile:802: asfdemux] Error 2
make[2]: *** Waiting for unfinished jobs....
Comment 1 Sebastian Dröge (slomo) 2017-02-27 18:56:14 UTC
commit 66659f07f59ca9fcfdef7ae0531ffa681ee5b079
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Feb 27 20:55:34 2017 +0200

    asfdemux: Fix compilation with gcc 7
    
    gstasfdemux.c: In function 'gst_asf_demux_parse_stream_object':
    gstasfdemux.c:3001:39: error: '<<' in boolean context, did you mean '<' ? [-Werror=int-in-bool-context]
       is_encrypted = ! !((flags & 0x8000) << 15);
                         ~~~~~~~~~~~~~~~~~~^~~~~~
    
    https://bugzilla.gnome.org/show_bug.cgi?id=779329
Comment 2 leigh123linux@googlemail.com 2017-02-27 19:22:31 UTC
Thank you for fixing the issue quickly.