asfdemux: Fix compilation with gcc 7

gstasfdemux.c: In function 'gst_asf_demux_parse_stream_object':
gstasfdemux.c:3001:39: error: '<<' in boolean context, did you mean '<' ? [-Werror=int-in-bool-context]
   is_encrypted = ! !((flags & 0x8000) << 15);
                     ~~~~~~~~~~~~~~~~~~^~~~~~

https://bugzilla.gnome.org/show_bug.cgi?id=779329